--- a/WS03_Advanced_CSS/styles.css
+++ b/WS03_Advanced_CSS/styles.css
@@ -1,54 +1,3 @@
-p {
-  color: blue;
-}
-
-body {
-  background-color: lightgray;
-}
-h1 {
-  font-size: 2em;
-}
-
-div {
-  padding: 20px;
-  margin: 10px;
-}
-
-table {
-  width: 100%;
-  border-collapse: collapse;
-}
-
-th {
-  background-color: #f2f2f2;
-}
-
-form {
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-}
-
-label {
-  font-weight: bold;
-}
-
-input[type="text"],
-input[type="email"] {
-  padding: 8px;
-  border: 1px solid #ddd;
-  border-radius: 4px;
-}
-
-input[type="submit"] {
-  background-color: #4caf50;
-  color: white;
-  padding: 10px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-}
-
 input[type="submit"]:hover {
   background-color: #45a049;
 }
@@ -95,4 +44,19 @@ input[type="submit"]:hover {
 
 .filter-image:hover {
   filter: grayscale(0%);
+}
+
+.quote {
+  position: relative;
+  padding-left: 20px;
+  font-style: italic;
+}
+
+.quote ::before {
+content: '“';
+font-size: 40px;
+position: absolute;
+left: 0;
+top: 0;
+color: lightgray;
 }
