--- a/WS03_Advanced_CSS/styles.css
+++ b/WS03_Advanced_CSS/styles.css
@@ -50,13 +50,12 @@ input[type="submit"]:hover {
   position: relative;
   padding-left: 20px;
   font-style: italic;
-}
-
-.quote ::before {
-content: '“';
-font-size: 40px;
-position: absolute;
-left: 0;
-top: 0;
-color: lightgray;
-}
+  }
+  .quote::before {
+  content: "''";
+  font-size: 40px;
+  position: absolute;
+  left: 0;
+  top: 0;
+  color: lightgray;
+  }
