--- a/WS07_project/styles2.css
+++ b/WS07_project/styles2.css
@@ -1,15 +1,13 @@
-
 body {
   min-height: 100vh;
   margin: 0;
   display: grid;
-   grid-template-rows: 200px 400px 10px auto;
+  grid-template-rows: 200px 400px 10px auto;
   grid-template-columns: 1fr 25px 25px 25px 25px 25px 1fr;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   background: #23272b;
 }
-
 
 .item img {
   width: 150px;
@@ -22,10 +20,7 @@ input[type="radio"] {
   display: flex;
   margin-top: 250px;
   margin-left: 0px;
-  
 }
-
-
 .radio-dots {
   grid-row: 1 / 2;
   grid-column: 2 / 7;
@@ -35,12 +30,12 @@ input[type="radio"] {
   align-items: center;
   transform: translateX(-60px);
 }
-h2.text-center, .teams {
+h2.text-center,
+.teams {
   grid-row: 5 / 6;
   grid-column: 1 / 8;
   text-align: center;
 }
-
 nav.navbar {
   grid-row: 1 / 2;
   grid-column: 1 / 8;
@@ -114,29 +109,30 @@ main#carousel {
   --position: 1;
   pointer-events: none;
 }
-@media (max-width: 1950px){
+@media (max-width: 1950px) {
   main#carousel {
-    height: 300px;}
+    height: 300px;
+  }
 
-div.item {
-  text-align: center;
-  padding: 20px;
-  border: 3px solid black;
-  border-radius: 20px;
-  background-color: #fff;
-  position: absolute;
-  width: 350px;
-  max-width: 300vw;
-  height: 300px;
-  max-height: 60vw;
-  background-color: white;
-  --r: calc(var(--position) - var(--offset));
-  --abs: max(calc(var(--r) * -1), var(--r));
-  transition: all 0.25s linear;
-  transform: rotateY(calc(-10deg * var(--r)))
-    translateX(calc(-300px * var(--r)));
-  z-index: calc((var(--position) - var(--abs)));
-}
+  div.item {
+    text-align: center;
+    padding: 20px;
+    border: 3px solid black;
+    border-radius: 20px;
+    background-color: #fff;
+    position: absolute;
+    width: 350px;
+    max-width: 300vw;
+    height: 300px;
+    max-height: 60vw;
+    background-color: white;
+    --r: calc(var(--position) - var(--offset));
+    --abs: max(calc(var(--r) * -1), var(--r));
+    transition: all 0.25s linear;
+    transform: rotateY(calc(-10deg * var(--r)))
+      translateX(calc(-300px * var(--r)));
+    z-index: calc((var(--position) - var(--abs)));
+  }
 }
 
 div.item:nth-of-type(1) {
@@ -197,7 +193,7 @@ input:nth-of-type(5):checked ~ main#carousel {
 }
 
 h2.text-center {
-  margin-top: -50px
+  margin-top: -50px;
 }
 .teams {
   display: flex;
@@ -209,17 +205,16 @@ h2.text-center {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 400px;      
+  width: 400px;
   background: transparent;
   border-radius: 10px;
   padding: 16px;
   color: #fff;
 }
 
-  .teams .card img {
+.teams .card img {
   width: 80px;
   height: 80px;
   object-fit: contain;
   margin-bottom: 8px;
 }
-
