--- a/WS07_project/styles.css
+++ b/WS07_project/styles.css
@@ -29,3 +29,13 @@
   font-weight: 100;
   line-height: 25px;
 }
+.footer {
+  width: 100%;
+  background-color: transparent;
+  color: #fff;
+  text-align: center;
+  padding: 20px 0;
+  margin-top: -66px;
+  font-size: 1.1rem;
+  letter-spacing: 1px;
+}
