--- a/WS07_project/styles.css
+++ b/WS07_project/styles.css
@@ -8,7 +8,7 @@
   width: 100%;
   height: 100vh;
   background-image: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)),
-    url(../images/counterstrike.jpg);
+    url(../images/counterstrikebanner.jpg);
   background-size: cover;
   background-position: center;
 }
