--- a/WS07_project/styles3.css
+++ b/WS07_project/styles3.css
@@ -43,7 +43,7 @@
 
 .container img:hover {
   transform: scale(1.05);
-  box-shadow: 0 8px 24px rgba(0,0,0,0.4);
+  box-shadow: 0 8px 24px rgba(0, 0, 0, 0.4);
   transition: transform 0.2s, box-shadow 0.2s;
 }
 .footer {
@@ -57,6 +57,5 @@
 }
 
 body {
-  background-color: rgba(10,14,32,255);
+  background-color: rgba(10, 14, 32, 255);
 }
-
